# pixel-inspector

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: file.rs  mod.rs  pixels.rs
src-tauri/src/image/: buffer.rs  decoder.rs  mod.rs  tonemap.rs
src-tauri/src/image/formats/: dds.rs  exr.rs  hdr.rs  mod.rs  psd.rs  standard.rs
src/components/Canvas/: ImageCanvas.css  ImageCanvas.tsx
src/components/Inspector/: PixelInspector.css  PixelInspector.tsx
src/components/Navigation/: CoordinateInput.css  CoordinateInput.tsx
src/hooks/: usePixelData.ts  usePixelNavigation.ts
src/store/: imageStore.ts  settingsStore.ts  viewportStore.ts
