[package]
name = "pixel-inspector"
version = "0.1.0"
edition = "2021"

[lib]
name = "pixel_inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["png", "jpeg", "gif", "bmp", "tga", "tiff", "webp", "hdr"] }
exr = "1"
ddsfile = "0.5"
texture2ddecoder = "0.1"
psd = "0.3"
rayon = "1"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
